ingress.yaml


  # apiVersion: v1
  # kind: Secret
  # metadata:
  #   name: example-tls
  #   namespace: foo
  # data:
  #   tls.crt: <base64 encoded cert>
  #   tls.key: <base64 encoded key>
  # type: kubernetes.io/tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: echo1
    #namespace: postgres
    annotations:
      cert-manager.io/cluster-issuer: "selfsigned-clusterissuer"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
    ingressClassName: nginx
    tls:
    - hosts:
      - local.test.com
      secretName: nginx-tls-secret    

    rules:
      - host: local.test.com
        http:
          paths:
            - path: /echo
              pathType: Prefix
              backend:
                service:
                  name: my-http-echo
                  port:
                    number: 5678

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana
    annotations:
      cert-manager.io/cluster-issuer: "selfsigned-clusterissuer"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
    ingressClassName: nginx
    tls:
    - hosts:
      - local.test.com
      secretName: grafana-tls-secret    

    rules:
      - host: local.test.com
        http:
          paths:
            - path: /grafana
              pathType: Prefix
              backend:
                service:
                  name: grafana
                  port:
                    number: 80
